@@ -18,7 +18,7 @@
       <!-- days -->
       <tr class="cal_dates">
         <th>${calendar.week[0].year}</th>
-        <th class="cal_${day.heading}" tal:repeat="day calendar.week">
+        <th class="cal_${day.css_day_abbr}" tal:repeat="day calendar.week">
           <a href="${day.show_url}">${day.heading}</a>
         </th>
         <th class="last">&nbsp;</th>
@@ -27,13 +27,13 @@
       <tr id="all_day" class="all_day">
         <th>all-day</th>
 
-        <td class="cal_${day.heading}" tal:repeat="day calendar.week">
-        <div class="all_day_block" tal:repeat="event day.all_day_events">
+        <td class="cal_${day.css_day_abbr}" tal:repeat="day calendar.week">
+        <div class="all_day_block">
           <div class="create">
-            <a class="add" href="#"><img src="${api.static_url}/images/cal_icons_plus.png" /></a>
+            <a class="add" href="${day.add_event_url}"><img src="${api.static_url}/images/cal_icons_plus.png" /></a>
           </div>
-          
-
+          <div tal:repeat="event day.all_day_events">
+          </div>
         </div>
         </td>
         <td class="last">&nbsp;</td>   
